--- a/conf.yaml
+++ b/conf.yaml
@@ -1,6 +1,6 @@
 seed: 42
 
-dataset: MNIST
+dataset: LFW
 criterion: Naive
 generator: Basic
 
@@ -11,10 +11,10 @@ lambda_l2: 1.0
 content_embedding_reg: 0.001
 
 dino_model_name: dino_vits8
-dino_global_patch_size: 28
+dino_global_patch_size: 224
 upsample_mode: bilinear # ['nearest', 'bilinear']
 
 lr: 0.001
-epochs: 50
+epochs: 10
 noise_std: 0.3
 batch_size: 64
