--- a/conf.yaml
+++ b/conf.yaml
@@ -1,20 +1,23 @@
 seed: 42
 
 dataset: LFW
-criterion: Naive
+criterion: ViT
 generator: Basic
 
-lambda_global_cls: 10.0
-lambda_global_ssim: 1.0
+lambda_global_cls: 0
+lambda_global_ssim: 0
 lambda_global_identity: 1.0
-lambda_l2: 1.0
-content_embedding_reg: 0.001
+lambda_l2: 0
+content_embedding_reg: 0.0001
+
+lambda_VGG: 1
+content_decay: 0.0001
 
 dino_model_name: dino_vits8
 dino_global_patch_size: 224
 upsample_mode: bilinear # ['nearest', 'bilinear']
 
 lr: 0.001
-epochs: 10
+epochs: 100
 noise_std: 0.3
-batch_size: 64
+batch_size: 16
