--- a/conf.yaml
+++ b/conf.yaml
@@ -2,21 +2,27 @@ seed: 41
 
 dataset: LFW
 criterion: Naive
-generator: Basic
+
+max_images_to_use: 500
 
 lambda_global_cls: 10
 lambda_global_ssim: 1
 lambda_global_identity: 5
+lambda_VGG: 1
 lambda_l1: 0
 lambda_l2: 0
-content_embedding_reg: 0.001
 
-lambda_VGG: 1
-content_decay: 0.0001
+content_reg_dino: 0.001
+content_reg_vgg: 0.0001
 
 dino_model_name: dino_vits8
 dino_global_patch_size: 224
 upsample_mode: bilinear # ['nearest', 'bilinear']
+
+content_dim: 128
+class_dim: 256
+n_adain_layers: 4
+adain_dim: 256
 
 lr_generator: 0.003
 lr_latent_codes: 0.0003
