--- a/conf.yaml
+++ b/conf.yaml
@@ -1,17 +1,19 @@
 seed: 36
 
 dataset: LFW
-criterion: VGG
-embedding_type: dino
+criterion: ViTVGGAlt
+embedding_type: basic
+model: DecoderEncoder
 
-max_images_to_use: 500
+max_images_to_use: 16
 
 lambda_global_cls: 0
 lambda_global_ssim: 0
-lambda_global_identity: 10
+lambda_global_identity: 0
 lambda_VGG: 1
 lambda_l1: 0
 lambda_l2: 0
+dino_embedding_l2: 1
 
 content_reg_dino: 0.001
 content_reg_vgg: 0.0001
@@ -27,6 +29,7 @@ adain_dim: 256
 
 lr_generator: 0.003
 lr_latent_codes: 0.0003
+lr_encoder: 0.001
 
 min_lr: 0.00001
 epochs: 100
